Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29593

Ctrl+D, Ctrl+L do not work anymore

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 12.0.0-beta1
    • Qt Creator 12.0.0
    • Terminal
    • None
    • Windows
    • 00b585675 (master)

      Ctrl+L should clear the screen and Ctrl+D should exit the terminal.

      This used to work with Qt Creator 11.

        For Gerrit Dashboard: QTCREATORBUG-29593
        # Subject Branch Project Status CR V

            jkobus Jarek Kobus
            cadam Cristian Adam
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes