Terminal: Fix sendKey

Fixes: QTCREATORBUG-29593
Change-Id: I4db2dc88ce56ec3b5b0ad1acd02ed5c48da51a06
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>